Learning html tags

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <!-- Headers -->
        <!-- can type comments here -->
 
-      <h1>Hello World!</h1>
+      <h1>Hello World!</h1> <!--h1 is the main header and as the number increases the size decreases-->
       <h2>Hello World!</h2>
       <h3>Hello World!</h3>
       <h4>Hello World!</h4>
@@ -24,15 +24,21 @@
       <img src="https://picsum.photos/id/237/200/300" alt="placeholder image"/>
 
       <!-- Paragraph -->
-      <p>This is a paragraph.</p>
-      <p>This is a paragraph with <strong>BOLDED TEXT</strong>.</p>
-    
+      <p>View your what you've made by right clicking and selecting "open with live server"</p>
+      <pre>See how the structure changes when you use different tags such as "&lt;p&gt;","&lt;h1&gt;","&lt;a&gt;","&lt;div&gt;","&lt;section&gt;","&lt;ul&gt;", and "&lt;ol&gt;" </pre>
+      <pre>notice how the font is different when using "&lt;pre&gt;"</pre>
+
        <!-- Unordered list -->
        <ul>
         <li>This is list item one</li>
         <li>This is list item two</li>
         <li>This is list item three</li>
       </ul>
+
+      <ol>
+        <li>First Item</li>
+        <li>Second Item</li>
+      </ol>
 
       <!-- Link -->
       <a href="https://www.google.com">This is a link to Google.com</a>
